--- a/amelie-sophie.html
+++ b/amelie-sophie.html
@@ -19,6 +19,30 @@
                 switch (letter) {
                     case 'a': return 1;
                     case 'b': return 2;
+                    case 'c': return 3;
+                    case 'd': return 4;
+                    case 'e': return 5;
+                    case 'f': return 6;
+                    case 'g': return 7;
+                    case 'h': return 8;
+                    case 'i': return 9;
+                    case 'j': return 10;
+                    case 'k': return 11;
+                    case 'l': return 12;
+                    case 'm': return 13;
+                    case 'n': return 14;
+                    case 'o': return 15;
+                    case 'p': return 16;
+                    case 'q': return 17;
+                    case 'r': return 18;
+                    case 's': return 19;
+                    case 't': return 20;
+                    case 'u': return 21;
+                    case 'v': return 22;
+                    case 'w': return 23;
+                    case 'x': return 24;
+                    case 'y': return 25;
+                    case 'z': return 26;
                     case ' ': return ' ';
                 }
             }
@@ -50,7 +74,15 @@
         <div>
         <div style="width: 45%; float: left;">
             <form onsubmit="return translateFromLettersToNumbers();">
-                <label>Letters message:</label>
+                <span style="color: red; font-weight: bold">L</span>
+                <span style="color: orange">e</span>
+                <span style="color: yellow">t</span>
+                <span style="color: green">t</span>
+                <span style="color: purple">e</span>
+                <span style="color: pink">r</span>
+                <span style="color: violet">s</span>
+
+                
                 <textarea id="lettersMessage" cols="40" rows="10" /></textarea>
                 <input type="submit" value="Translate"/>
             </form>
